@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2100 2011/12/16 12:04:07 mg Exp $
+# $Id: CHANGES,v 1.2101 2011/12/16 14:38:24 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -11,6 +11,8 @@
 
 3.1.0.beta4 2011-01-??
  - 2011-12-16 Fixed Lithuanian language file encoding.
+ - 2011-12-16 Added OTRS 2.4-style article colors to the article list in AgentTicketZoom.
+    This is disabled by default, enable 'Ticket::UseArticleColors' in SysConfig to use it.
 
 3.1.0.beta3 2011-12-20
  - 2011-12-15 Fixed bug#8012 - Confusing dashboard filter names.
